tdf#108012 - Clicking in the font field should select the contents

Change-Id: I1276976e031b419ca5cc3cc8e848f2af58ce4cfb