include/vcl/edit.hxx
@@ -88,6 +88,7 @@ private:
     sal_Int32           mnMaxWidthChars;
     sal_Unicode         mcEchoChar;
     bool                mbModified:1,
+                        mbSelectAllSingleClick:1,
                         mbInternModified:1,
                         mbReadOnly:1,
                         mbInsertMode:1,
@@ -200,6 +201,9 @@ public:
 
     virtual void        SetReadOnly( bool bReadOnly = true );
     virtual bool        IsReadOnly() const { return mbReadOnly; }
+
+    void                SetSelectAllSingleClick( bool bSelectAllSingleClick );
+    bool                IsSelectAllSingleClick() const { return mbSelectAllSingleClick; }
 
     void                SetInsertMode( bool bInsert );
     bool                IsInsertMode() const;
